# grasp-predictor

./: .gitignore  BLOG_POST.md  CITATION.cff  LICENSE  README.md  TECHNICAL_WRITEUP.md  pyproject.toml  requirements.txt  run_ingestion_parallel.py  run_simulation.py  run_training_cached.py  run_training_crossdataset.py
.github/workflows/: ci.yml
data/: __init__.py  cross_dataset_ingestor.py  feature_mapper.py  label_adapters.py  tensor_builder.py
docker/: compose-training.yml
models/: __init__.py  cached_bag_dataset.py  cached_dataset.py  cached_lstm.py  dataset.py  lstm.py  mil_attention.py  pcgrad.py  trainer.py
results/: audit_cache.json  pools_via_mosaico.json  refresh_kin_summary.json  test_split.json
results/crossdataset_run/: results.json  scaler.npz
results/module_c_franka/: REPORT_PERFECT.md  REPORT_REPLAY.md
results/multimodal_indist_v10l_seed123/: results.json  scaler.npz
results/multimodal_indist_v10l_seed123/checkpoints/: best_model.pt
results/multimodal_indist_v10l_seed42/: results.json  scaler.npz
results/multimodal_indist_v10l_seed42/checkpoints/: best_model.pt
results/multimodal_indist_v10l_seed7/: results.json  scaler.npz
results/multimodal_indist_v10l_seed7/checkpoints/: best_model.pt
results/multimodal_indist_v9_sharp/: acts_v9_2parts.json  acts_v9_2parts_perfect.json  acts_v9_2parts_reassemble_test.json  acts_v9_replay.json  results.json  scaler.npz
results/multimodal_indist_v9_sharp/checkpoints/: best_model.pt
results/video_overlay_demo/: acts_v10l_droid_test.json
scripts/: audit_cache.py  backfill_reassemble_labels.py  build_balanced_pools_via_mosaico.py  check_catalog_images.py  check_label_topic.py  concat_acts.py  dump_scaler.py  find_test_split.py  ingest_droid_parallel.py  ingest_generic.py  ingest_reassemble.py  make_figures.py  plot_per_dataset_results.py  precompute_cnn_features.py  rebuild_catalog.py  refresh_kin_in_cache.py  render_video.sh  run_all.sh  run_full_pipeline.sh  run_v9.sh  select_demo_sequences.py  select_heldout_demo.py  setup.sh  shadow_loop_demo.py  train.sh  video_overlay_demo.py  wipe_reassemble.py
simulation/assets/mujoco_menagerie/franka_emika_panda/: grasp_lab.xml  grasp_workcell.xml  panda.xml
simulation/assets/mujoco_menagerie/franka_emika_panda/assets/: pyramid_black.stl
tests/: test_smoke.py
