[tool.poetry]
name = "grasp-integrity-predictor"
version = "1.0.0"
description = "Cross-format binary grasp failure classifier (LateFusionLSTM) over three manipulation datasets unified through the Mosaico data platform."
authors = ["Edoardo Bambini"]
readme = "README.md"
homepage = "https://github.com/EdoardoBambini/grasp-predictor"
repository = "https://github.com/EdoardoBambini/grasp-predictor"
keywords = ["robotics", "grasp-failure", "physical-ai", "mosaico", "lstm", "case-study"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.poetry.dependencies]
python = ">=3.13,<4"

# Mosaico SDK: Python client for the Mosaico data platform
mosaicolabs = ">=0.4.0"

# Core ML stack
torch = ">=2.2.0"
torchvision = ">=0.17.0"          # MobileNetV3 Small backbone for the CNN pre-cache
numpy = ">=2.0.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.4.0"          # IncrementalPCA, ROC, F1, stratified split
Pillow = ">=10.0.0"               # JPEG decode in feature_mapper

# Deliverable rendering and training plots
opencv-python = ">=4.8.0"         # source video read + HUD overlay + VideoWriter
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"

# Ingestion utilities
h5py = ">=3.10.0"                 # Reassemble label backfill + video blob extract
psycopg2-binary = ">=2.9.0"       # catalog rebuild
pyarrow = ">=22.0.0"              # catalog rebuild + DROID parquet metadata
rich = ">=13.0.0"                 # multiprocess ingest console

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
